frontend/src/App.css
@import "./styles/Global.css";


body {
  background-color: var(--main-bg-color);
  color: white;
}

body, html, .App, #root {
  height: 100%;
}

hr {
  border-top: 0.01rem solid white;
}

@media all and (max-height: 670px) {
  #Saxophonist-Logo { width: 38%; }
}
@media all and (min-width: 767px) {
  #Saxophonist-Logo { width: 20%; }
}

.App {
  text-align: center;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
  pointer-events: none;
}

.App-footer {
  position: -webkit-sticky;
  position: sticky;
  bottom: 0px;
  background-color: white;
  color: var(--main-bg-color);
  margin-top: auto;
}

.App-header {
  color: white;
  min-height: 10vh;
}

.App-header, .App-footer {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.bm-burger-button svg, .bm-menu-wrap svg {
  display: flex;
}

.btn {
  text-transform: uppercase;
  font-weight: bold;
  letter-spacing: 0.05em;
  color: black;
  border-radius: 0;
}

.btn-outline-light {
  color: white;
}

.btn-primary {
  background-color: #EF532B;
  border-color: #EF532B;
}

.btn-light {
  background-color: white;
  border-color: white;
}

.chord-row {
  background-color: var(--secondary-bg-color);
}

.color-coded--text {
  /* looks worse on larger monitor */
  /* -webkit-text-stroke: 0.033em black; */
  letter-spacing: 0.11em;
  text-shadow: -1.1px 0 black, 0 1.1px black, 1.1px 0 black, 0 -1.1px black;
  -webkit-font-smoothing: subpixel-antialiased;
  color: white;
}

.color-coded--text:not(small) {
  font-size: 1.2rem;
}

.expanded-chord-row {
  background-color: #355C68;
}

.pe-none {
  pointer-events: none;
}

.playback-controls--row {
  padding-bottom: 1.5rem;
  justify-content: space-evenly;
  align-items: center;
}

.ReactPiano__Key--active.ReactPiano__Key--accidental {
  border: none !important;
}

.recharts-pie text {
  stroke: black;
  stroke-width: 0.1em;
  paint-order: stroke fill;
  -webkit-font-smoothing: subpixel-antialiased;
  fill: white;
}

.piano-visualization-popover {
  max-width: 100vw;
}

.play-along--count-in-modal--backdrop {
  background-color: rgba(0, 0, 0 , 0.8)!important;
}

.play-along--count-in-modal--content {
  background-color: transparent;
  border: 0;
}

.play-along--chord + .play-along--chord {
  border-left: 1px solid white;
}

#react-burger-menu-btn {
  display: none;
}

